--- a/index.html
+++ b/index.html
@@ -11,20 +11,24 @@
 		<header class="navigation">
 			<nav id="navbar">
 				<section id="logo">
-					<h3>Flatlander's Gems</h3>
+					<h1>Flatlander's Gem Store</h1>
 				</section>
-				<ul>
-					<li><a href="index.html">Home</a></li>
-					<li><a href="store.html">Store</a></li>
-				</ul>
 			</nav>
 		</header>
 		<main>
-			<p>Flatlander's Gems was found by Frank Flatlander in December 2015 when he found the first dodecahron mine.  The colors spoke to him in a way like nothing before.  He knew that this was a product for all. 
+			<div class="panel-primary" ng-controller="StoreController as store">
+				<ul class="list-group">
+					<li class="item list-group-item col-md-6" ng-repeat="product in store.products">
+						<h3><product-title></product-title></h3>
+					
+						<product-gallery></product-gallery>
+
+						<product-panel></product-panel>
+					</li>
+				<script type="text/javascript" src="angular.min.js"></script>
+				<script type="text/javascript" src="app.js"></script>
+				<script type="text/javascript" src="products.js"></script>
+			</div>
 		</main>
-		<footer>
-			t. 555-123-5555
-			1492 Round Circle Way, Chris Columbus, Spain
-		</footer>
 	</body>
 </html>
