Project files for both a firefox but and server run angular

--- a/index2.html
+++ b/index2.html
@@ -25,7 +25,7 @@
 						<product-panel></product-panel>
 					</li>
 				<script type="text/javascript" src="angular.min.js"></script>
-				<script type="text/javascript" src="./angularjs/app.js"></script>
+				<script type="text/javascript" src="app-firefox.js"></script>
 				<script type="text/javascript" src="products.js"></script>
 			</div>
 		</main>
