--- a/product-panel.html
+++ b/product-panel.html
@@ -1,5 +1,5 @@
 <section>
-	<ul class="nav nav-tabs">
+	<ul class="tabs">
 		<li ng-class="{active: panel.isSelected(1)}"> 
 			<a href ng-click="panel.selectTab(1)">Description</a>
 		</li>
