Contiuned work on dropdown menu, removing caret (arrow) and top border to fit Google/Material design

--- a/product-panel.html
+++ b/product-panel.html
@@ -38,12 +38,14 @@
 			</blockquote>
 			<div class="form-inline">
 				<div class="form-group">
-					<select ng-model="reviewCtrl.review.stars" required placeholder="Please Rate">
-						<option value="1">1 star</option>
-						<option value="2">2 stars</option>
-						<option value="3">3 stars</option>
-						<option value="4">4 stars</option>
-						<option value="5">5 stars</option>
+					<label for="rate-item">Please Rate Item</label>
+					<span class="caret"></span>
+					 	<select ng-model="reviewCtrl.review.stars" required placeholder="Please Rate">
+							<option value="1">1 star</option>
+							<option value="2">2 stars</option>
+							<option value="3">3 stars</option>
+							<option value="4">4 stars</option>
+							<option value="5">5 stars</option>
 					</select>
 				</div>
 				<br>
