--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 		<link rel="stylesheet" type="text/css" href="bootstrap.min.css" />
 		<link rel="stylesheet" type="text/css" href="./styles/style.css" />
-		<link href='https://fonts.googleapis.com/css?family=Roboto:400,700' rel='stylesheet' type='text/css'>
+		<link href='https://fonts.googleapis.com/css?family=Roboto:400,500,700' rel='stylesheet' type='text/css'>
 	</head>
 	<body>
 		<header class="navigation">
@@ -26,7 +26,7 @@
 						<product-panel></product-panel>
 					</li>
 				<script type="text/javascript" src="angular.min.js"></script>
-				<script type="text/javascript" src="./angularjs/app.js"></script>
+				<script type="text/javascript" src="./app.js"></script>
 				<script type="text/javascript" src="products.js"></script>
 			</div>
 		</main>
