--- a/product-gallery.html
+++ b/product-gallery.html
@@ -2,9 +2,11 @@
   <div class="img-wrap">
     <img ng-src="{{product.images[gallery.current]}}" />
   </div>
-  <ul class="img-thumbnails clearfix">
-    <li class="small-image pull-left thumbnail" ng-repeat="image in product.images">
-      <img ng-src="{{image}}" />
-    </li>
-  </ul>
+  <div>
+	  <ul class=" gallery img-thumbnails clearfix">
+	    <li class="small-image thumbnail" ng-repeat="image in product.images">
+	      <img ng-click="gallery.setCurrent($index)" ng-src="{{image}}"/>
+	    </li>
+	  </ul>
+  </div>
 </div>
